SpaceAPI from SpaceAPI commit ca630f874543f8c01f6d19b7b7d9c2d00066d6ed Updated to fix timing bug where titania/farbot was not updating the internal state of the space. Added space update to time_delta controller

--- a/titania.conf
+++ b/titania.conf
@@ -7,10 +7,9 @@ author "Andrew Bolster; 4/12"
 #Updated 4/8/12
 #
 
-env BASE="/opt/SpaceState/"
+env BASE="/opt/Titania/"
 env SCRIPT="titania.py"
-env JSON="farsetlabs.json"
-env AUTH="farsetlabs_twitter_auth.json"
+env AUTH="farsetlabs_auth.json"
 
 pre-start script
     echo "starting service - $SCRIPT..."
@@ -31,6 +30,6 @@ respawn limit 2 5
 
 
 script
-  exec ${BASE}scripts/${SCRIPT} --auth_file ${BASE}$AUTH 2>&1
+  exec ${BASE}/${SCRIPT} --auth_file ${BASE}$AUTH 2>&1
 end script
 
